Change width of moviecontainer and header to avoid white space on edge of header

--- a/src/containers/LoginControls/LoginControls.css
+++ b/src/containers/LoginControls/LoginControls.css
@@ -1,7 +1,6 @@
 .LoginControls {
   background-color: #e8e8e8;
   height: 56px;
-  width: 100%;
 }
 
 .login-form {
