--- a/src/containers/MovieContainer/MovieContainer.css
+++ b/src/containers/MovieContainer/MovieContainer.css
@@ -9,7 +9,6 @@
   padding: 10px;
   position: absolute;
   top: 176px;
-  width: 100%;
 }
 
 .spinner {
